<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.0</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.qc.ircm</groupId>
  <artifactId>generate-property-names</artifactId>
  <name>generate-property-names</name>
  <inceptionYear>2018</inceptionYear>
  <version>2.2-SNAPSHOT</version>
  <description>Creates a metadata class containing property names of annotated classes as public static fields.
  </description>
  <url>https://github.com/IRCM/generate-property-names</url>
  <organization>
    <name>Institut de recherches cliniques de Montreal (IRCM)</name>
    <url>http://www.ircm.qc.ca</url>
  </organization>
  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>poitrac</id>
      <name>Christian Poitras</name>
      <email>christian.poitras@ircm.qc.ca</email>
      <organization>IRCM</organization>
      <organizationUrl>http://www.ircm.qc.ca</organizationUrl>
      <timezone>-5</timezone>
      <roles>
        <role>Analyste en informatique</role>
      </roles>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:github.com:IRCM/generate-property-names.git</connection>
    <developerConnection>scm:git:github.com:IRCM/generate-property-names.git</developerConnection>
    <url>https://github.com/IRCM/generate-property-names</url>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/IRCM/generate-property-names/issues</url>
  </issueManagement>
  <distributionManagement>
    <repository>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <properties>
    <java.version>21</java.version>
    <auto-service.version>1.1.1</auto-service.version>
    <compile-testing.version>0.21.0</compile-testing.version>
    <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
    <license-maven-plugin.version>4.1</license-maven-plugin.version>
    <spotbugs-maven-plugin.version>4.7.3.6</spotbugs-maven-plugin.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>com.google.auto.service</groupId>
      <artifactId>auto-service</artifactId>
      <version>${auto-service.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.google.testing.compile</groupId>
      <artifactId>compile-testing</artifactId>
      <version>${compile-testing.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <excludes>
              <exclude>ca/qc/ircm/processing/test/**/*.java</exclude>
            </excludes>
            <argLine>
              --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
              --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
              --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven-source-plugin.version}</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <phase>verify</phase>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <show>private</show>
          </configuration>
          <executions>
            <execution>
              <id>attach-javadoc</id>
              <phase>verify</phase>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>${maven-gpg-plugin.version}</version>
          <executions>
            <execution>
              <id>sign-artifacts</id>
              <phase>verify</phase>
              <goals>
                <goal>sign</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>deploy</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
          </plugin>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
          </plugin>
          <plugin>
            <artifactId>maven-gpg-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <configuration>
          <reportsDirectories>
            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
          </reportsDirectories>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>report-only</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>${spotbugs-maven-plugin.version}</version>
      </plugin>
    </plugins>
  </reporting>
</project>
